# ngxcfm

./: LICENSE  README.md  log.py  ngxcfm.py  ngxfmt.py  os_symlink.py  os_tar.py  pyproject.toml  requirements.txt  switch_conf.py  transfer_nginx_files.py
ngxcfm/: __main__.py  format.py  list_conf.py  log.py  main.py  ngxfmt.py  os_symlink.py  os_tar.py  switch_conf.py  transfer_nginx_files.py
ngxcfm/os_platform/: README.md  _os_style.py  os_checkdir.py  os_file.py  os_symlink.py  os_tar.py
